crates/usfm_parser/tests/snapshots/recovery__character_style_not_closed__by_outer_closer.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\em a \\+nd b\\em* c"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..39
  VerseStart 1@16..20
  Char em@21..37
    Text "a "@25..27
    Char nd@27..37
      Text "b"@32..33
  Text " c"@37..39
  VerseEnd 1
ChapterEnd 1
--- diagnostics
warning[character-style-not-closed] @27..31: `\nd` was closed by `\em*` instead of `\nd*`
